# ChangeLog for dev-python/cython
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/cython/ChangeLog,v 1.93 2013/02/16 22:07:28 mgorny Exp $

*cython-0.23_beta2 (31 Jul 2015)

  31 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +cython-0.23_beta2.ebuild:
  Importing new cython beta to try to reduce the reliance on a patched cython

*cython-0.22-r5 (13 Jul 2015)

  13 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +cython-0.22-r5.ebuild, +files/cython-0.22-includes_cmp.patch,
  +files/cython-0.22-transitive_dependencies.patch, -cython-0.22-r4.ebuild:
  get cython 0.22 on par with sage's version. Please someone release 0.23 with
  all these.

*cython-0.22-r4 (06 Jul 2015)

  06 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +cython-0.22-r4.ebuild, +files/cython-0.22-find_pxd.patch,
  -cython-0.22-r2.ebuild, -cython-0.22-r3.ebuild:
  Update cython 0.22 patchset to include stuff from
  https://github.com/cython/cython/pull/409 which is important now that we ship
  headers and .pxd files.

  09 Jun 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  -cython-0.19.2.ebuild, -cython-0.19.ebuild, -files/api_mangle.patch,
  -files/build_dir.patch:
  clean up old unused ebuild

*cython-0.22-r3 (24 May 2015)

  24 May 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +cython-0.22-r3.ebuild, +files/api_mangle.patch,
  +files/cython-0.22-api_mangle.patch, +files/cython-0.22-extern_impl.patch:
  New cython patchset for sage 6.8.beta0. Can't wait 0.23 to drop all that.

  22 May 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  cython-0.22-r2.ebuild:
  Solve issue #354 probably caused by a hardened profile.

*cython-0.22-r2 (28 Apr 2015)

  28 Apr 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +cython-0.22-r2.ebuild, +files/cython-0.22-c_tuple_type_memleak.patch,